<resources>
    <string name="app_name">Budget_Tracker</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="detail_monthly_budget1">Select the month</string>
    <string name="detail_monthly_budget2">to create the budget</string>
    <string name="m1">January</string>
    <string name="m2">February</string>
    <string name="m3">March</string>
    <string name="m4">April</string>
    <string name="m5">May</string>
    <string name="m6">June</string>
    <string name="m7">July</string>
    <string name="m8">August</string>
    <string name="m9">September</string>
    <string name="m10">October</string>
    <string name="m11">November</string>
    <string name="m12">December</string>
    <string name="Balance">Balance</string>
    <string name="detail">Detail</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="savings">Savings</string>
    <string name="plus">+</string>
    <string name="overview">Overview</string>
    <string name="tv_overview">Overview</string>
    <string name="tv_balance">Balance</string>
    <string name="signo_dinero">$</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="new_cat">New category</string>
    <string name="cat_name">Category\'s name</string>
    <string name="save">Save</string>
    <string name="incomes_detail">Income\'s detail</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="expenses_detail">Expense\'s detail</string>
    <string name="savings_detail">Saving\'s detail</string>
    <string name="display_name_app">Budget Tracker</string>
    <string name="saved">Saved</string>
    <string name="spent">Spent</string>
    <string name="new_wallet">New wallet</string>
    <string name="wallet_name">Wallet\'s name</string>
    <string name="wallet">Wallet</string>
    <string name="wallets_amount">Wallet\'s amount</string>
    <string name="Wallets" />
    <string-array name="options_array">
        <item>@string/m1</item>
        <item>@string/m2</item>
        <item>@string/m3</item>
        <item>@string/m4</item>
        <item>@string/m5</item>
        <item>@string/m6</item>
        <item>@string/m7</item>
        <item>@string/m8</item>
        <item>@string/m9</item>
        <item>@string/m10</item>
        <item>@string/m11</item>
        <item>@string/m12</item>
    </string-array>
    <string-array name="filter_array">
        <item>Filter</item>
        <item>Health</item>
        <item>Work</item>
        <item>Gifts</item>
    </string-array>
    <string-array name="wallet_array">
        <item>Home</item>
        <item>Inversions</item>
        <item>Travel</item>
    </string-array>
</resources>