<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title_monthly_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:text="@string/monthly_budget"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_m_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/detail_monthly_budget2"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_m_b1" />

    <TextView
        android:id="@+id/tv_detail_m_b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/detail_monthly_budget1"
        android:textColor="@color/green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_monthly_b" />

    <ImageButton
        android:id="@+id/btn_user_green"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_button_circle"
        android:backgroundTint="@color/green_dark"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="310dp"
        android:background="@drawable/shape_main_activity"
        android:backgroundTint="@color/green_dark"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_jan"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m1"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_feb"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m2"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jan" />

            <Button
                android:id="@+id/btn_mar"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m3"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_feb" />

            <Button
                android:id="@+id/btn_apr"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m4"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_mar" />

            <Button
                android:id="@+id/btn_may"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m5"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_apr" />

            <Button
                android:id="@+id/btn_jun"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m6"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_may" />

            <Button
                android:id="@+id/btn_jul"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m7"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jun" />

            <Button
                android:id="@+id/btn_ago"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m8"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jul" />

            <Button
                android:id="@+id/btn_sep"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m9"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_ago" />

            <Button
                android:id="@+id/btn_oct"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m10"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sep" />

            <Button
                android:id="@+id/btn_nov"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m11"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_oct" />

            <Button
                android:id="@+id/btn_dic"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="125dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/shape_rounded_button"
                android:backgroundTint="@color/green_opacity"
                android:padding="5dp"
                android:text="@string/m12"
                android:textAppearance="@style/ButtonTextStyle"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_nov" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>