<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_border_login_up"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="218dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bluedge1" />

    <ImageView
        android:id="@+id/iv_border_login_down"
        android:layout_width="0dp"
        android:layout_height="225dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_register_login"
        app:srcCompat="@drawable/bluedge2" />

    <TextView
        android:id="@+id/tv_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="436dp"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_border_login_up" />

    <ImageView
        android:id="@+id/iv_login_edittexts"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_activity"
        app:srcCompat="@drawable/linesblue" />

    <TextView
        android:id="@+id/tv_image_user_login"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/user"
        android:backgroundTint="@color/blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_login_edittexts" />

    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_border_button"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/blue_light"
        app:layout_constraintStart_toEndOf="@+id/tv_image_user_login"
        app:layout_constraintTop_toTopOf="@+id/iv_login_edittexts" />

    <TextView
        android:id="@+id/tv_image_lock_login"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/password"
        android:backgroundTint="@color/blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_image_user_login" />

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/shape_border_button"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        android:textColorHint="@color/blue_light"
        app:layout_constraintEnd_toStartOf="@+id/ibtn_next_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_login" />

    <ImageButton
        android:id="@+id/ibtn_next_login"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_password_login"
        app:layout_constraintTop_toTopOf="@+id/iv_login_edittexts"
        app:srcCompat="@drawable/nextblue" />

    <TextView
        android:id="@+id/tv_forgot_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="64dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_edittexts" />

    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="215dp"
        android:background="@drawable/shape_border_button_blue"
        android:text="@string/register"
        android:textColor="@color/blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>